// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar defaultAvatar 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <img
    className="Avatar__Image-sc-1wtet2j-2 enCcxg"
    src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
  />
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      Ayden Lundgre
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Avatar iconOnly 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <div
    className="Avatar__Circle-sc-1wtet2j-3 kNqfAA"
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
  </div>
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      Ayden Lundgre
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Avatar inverted 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 eFGCqk"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 cjfUrq"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 jXpBeJ"
          type="inverted"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 bdyzed"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 cjfUrq"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 jXpBeJ"
          type="inverted"
        >
          <a
            className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
            data-testid={null}
            href="#"
          >
            Ayden Lundgre
          </a>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 bdyzed"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
          type="inverted"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kyXVZS"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
          type="inverted"
        >
          <a
            className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
            data-testid={null}
            href="#"
          >
            Ayden Lundgre
          </a>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kyXVZS"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Avatar nameLink 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <img
    className="Avatar__Image-sc-1wtet2j-2 enCcxg"
    src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
  />
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
        data-testid={null}
        href="#"
      >
        Ayden Lundgre
      </a>
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Avatar noImage 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <div
    className="Avatar__Circle-sc-1wtet2j-3 kNqfAA"
  >
    AL
  </div>
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      Ayden Lundgre
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Avatar small 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <div
        className="Avatar__Circle-sc-1wtet2j-3 egTfbh"
      >
        AL
      </div>
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          <a
            className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
            data-testid={null}
            href="#"
          >
            Ayden Lundgre
          </a>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Units/Avatar Default avatar 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <img
    className="Avatar__Image-sc-1wtet2j-2 enCcxg"
    src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
  />
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      Ayden Lundgre
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Units/Avatar Icon only 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <div
    className="Avatar__Circle-sc-1wtet2j-3 kNqfAA"
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
  </div>
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      Ayden Lundgre
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Units/Avatar Name as link 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <img
    className="Avatar__Image-sc-1wtet2j-2 enCcxg"
    src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
  />
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
        data-testid={null}
        href="#"
      >
        Ayden Lundgre
      </a>
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Units/Avatar No image 1`] = `
<div
  className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
>
  <div
    className="Avatar__Circle-sc-1wtet2j-3 kNqfAA"
  >
    AL
  </div>
  <div
    className="Avatar__TextContent-sc-1wtet2j-1 emrUQv"
  >
    <h3
      className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 TZuyA"
    >
      Ayden Lundgre
    </h3>
    <span
      className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 lgvTgY"
    >
      Senior Business Analyst
    </span>
  </div>
</div>
`;

exports[`Storyshots Units/Avatar On dark background 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 eFGCqk"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 cjfUrq"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 jXpBeJ"
          type="inverted"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 bdyzed"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 ihQtwr"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 enCcxg"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 cjfUrq"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 jXpBeJ"
          type="inverted"
        >
          <a
            className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
            data-testid={null}
            href="#"
          >
            Ayden Lundgre
          </a>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 bdyzed"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
          type="inverted"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kyXVZS"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
      type="inverted"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
        type="inverted"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
          type="inverted"
        >
          <a
            className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
            data-testid={null}
            href="#"
          >
            Ayden Lundgre
          </a>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kyXVZS"
          type="inverted"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Units/Avatar Small 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <div
        className="Avatar__Circle-sc-1wtet2j-3 egTfbh"
      >
        AL
      </div>
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          Ayden Lundgre
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <div
      className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
    >
      <img
        className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
        src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
      />
      <div
        className="Avatar__TextContent-sc-1wtet2j-1 gtYgsc"
      >
        <h3
          className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 dbTNMm"
        >
          <a
            className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 kGEvAk StyledLink"
            data-testid={null}
            href="#"
          >
            Ayden Lundgre
          </a>
        </h3>
        <span
          className="Typography__Text-sc-1613j99-7 Avatar__Subtitle-sc-1wtet2j-5 kAvPxL"
        >
          Senior Business Analyst
        </span>
      </div>
    </div>
  </div>,
]
`;
